Name:                hs-cvsu
Version:             0.1.0
Synopsis:            Haskell bindings for the cvsu library.
Description:         This library contains bindings to the c code in cvsu
                     library, based on bindings-dsl, haskell types wrapped
                     around them, and many functions for utilizing the scene
                     understanding features of cvsu.
Homepage:            http://github.org/amnipar/hs-cvsu
License:             BSD3
License-file:        LICENSE
Author:              Matti Johannes Eskelinen
Maintainer:          matti.j.eskelinen@gmail.com
Stability:           Experimental
Category:            AI, Graphics, Machine Vision
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >=1.8

Library
  Exposed-modules:
    CVSU.Types
    CVSU.PixelImage
    CVSU.Edges
    CVSU.ImageTree
  Other-Modules:
    CVSU.Bindings.Types
    CVSU.Bindings.PixelImage
    CVSU.Bindings.Integral
    CVSU.Bindings.Edges
    CVSU.Bindings.List
    CVSU.Bindings.ImageTree
    CVSU.Bindings.OpenCV
  Extensions:
    ForeignFunctionInterface
  Build-Depends:
    base >= 3 && < 5,
    bindings-DSL >= 1.0.7 && < 1.1,
    parallel >= 3.2.0.0,
    deepseq >= 1.1.0.2,
    CV >= 0.3.6.2
  Include-dirs:
    c_cvsu
    /usr/include/opencv
  Extra-libraries:
    opencv_calib3d,
    opencv_contrib,
    opencv_core,
    opencv_features2d,
    opencv_highgui,
    opencv_imgproc,
    opencv_legacy,
    opencv_ml,
    opencv_objdetect,
    opencv_video
  Includes:
    c_cvsu/cvsu_config.h,
    c_cvsu/cvsu_macros.h,
    c_cvsu/cvsu_memory.h,
    c_cvsu/cvsu_output.h,
    c_cvsu/cvsu_types.h,
    c_cvsu/cvsu_basic.h,
    c_cvsu/cvsu_filter.h,
    c_cvsu/cvsu_edges.h,
    c_cvsu/cvsu_opencv.h,
    c_cvsu/cvsu_integral.h,
    c_cvsu/cvsu_list.h,
    c_cvsu/cvsu_image_tree.h
  Install-includes:
    c_cvsu/cvsu_config.h,
    c_cvsu/cvsu_macros.h,
    c_cvsu/cvsu_memory.h,
    c_cvsu/cvsu_output.h,
    c_cvsu/cvsu_types.h,
    c_cvsu/cvsu_basic.h,
    c_cvsu/cvsu_filter.h,
    c_cvsu/cvsu_edges.h,
    c_cvsu/cvsu_opencv.h,
    c_cvsu/cvsu_integral.h,
    c_cvsu/cvsu_list.h,
    c_cvsu/cvsu_image_tree.h
  C-sources:
    c_cvsu/cvsu_memory.c,
    c_cvsu/cvsu_output.c,
    c_cvsu/cvsu_types.c,
    c_cvsu/cvsu_basic.c,
    c_cvsu/cvsu_filter.c,
    c_cvsu/cvsu_edges.c,
    c_cvsu/cvsu_opencv.c,
    c_cvsu/cvsu_integral.c,
    c_cvsu/cvsu_list.c,
    c_cvsu/cvsu_image_tree.c

source-repository head
  type:     git
  location: git@yousource.it.jyu.fi:hs-cvsu/hs-cvsu.git
