Name:                hs-cvsu
Version:             0.1.0
Synopsis:            Haskell bindings for the cvsu library.
Description:         This library contains bindings to the c code in cvsu
                     library, based on bindings-dsl, haskell types wrapped
                     around them, and many functions for utilizing the scene
                     understanding features of cvsu.
Homepage:            http://github.org/amnipar/hs-cvsu
License:             BSD3
License-file:        LICENSE
Author:              Matti Johannes Eskelinen
Maintainer:          matti.j.eskelinen@gmail.com
Stability:           Experimental
Category:            AI, Graphics, Machine Vision
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >=1.8

Library
  Exposed-modules:
    CVSU.Types
    CVSU.PixelImage
    CVSU.Integral
    CVSU.Edges
    CVSU.List
    CVSU.ImageTree
    CVSU.ConnectedComponents
    CVSU.OpenCV
  Other-Modules:
    CVSU.Bindings.Types
    CVSU.Bindings.PixelImage
    CVSU.Bindings.Integral
    CVSU.Bindings.Edges
    CVSU.Bindings.List
    CVSU.Bindings.ImageTree
    CVSU.Bindings.ConnectedComponents
    CVSU.Bindings.OpenCV
  Extensions:
    ForeignFunctionInterface
  Build-Depends:
    base >= 3 && < 5,
    bindings-DSL >= 1.0.7 && < 1.1,
    parallel >= 3.2.0.0,
    deepseq >= 1.1.0.2,
    CV >= 0.3.6.2
  Include-dirs:
    c
    /usr/include/opencv
  cc-options:
    --std=c99
  Extra-libraries:
    m,
    opencv_calib3d,
    opencv_contrib,
    opencv_core,
    opencv_features2d,
    opencv_highgui,
    opencv_imgproc,
    opencv_legacy,
    opencv_ml,
    opencv_objdetect,
    opencv_video
  Includes:
    c/cvsu_config.h,
    c/cvsu_macros.h,
    c/cvsu_memory.h,
    c/cvsu_output.h,
    c/cvsu_types.h,
    c/cvsu_basic.h,
    c/cvsu_filter.h,
    c/cvsu_edges.h,
    c/cvsu_opencv.h,
    c/cvsu_integral.h,
    c/cvsu_list.h,
    c/cvsu_image_tree.h,
    c/cvsu_connected_components.h
  Install-includes:
    c/cvsu_config.h,
    c/cvsu_macros.h,
    c/cvsu_memory.h,
    c/cvsu_output.h,
    c/cvsu_types.h,
    c/cvsu_basic.h,
    c/cvsu_filter.h,
    c/cvsu_edges.h,
    c/cvsu_opencv.h,
    c/cvsu_integral.h,
    c/cvsu_list.h,
    c/cvsu_image_tree.h,
    c/cvsu_connected_components.h
  C-sources:
    c/cvsu_memory.c,
    c/cvsu_output.c,
    c/cvsu_types.c,
    c/cvsu_basic.c,
    c/cvsu_filter.c,
    c/cvsu_edges.c,
    c/cvsu_opencv.c,
    c/cvsu_integral.c,
    c/cvsu_list.c,
    c/cvsu_image_tree.c,
    c/cvsu_connected_components.c

source-repository head
  type:     git
  location: git@yousource.it.jyu.fi:hs-cvsu/hs-cvsu.git
