Name:                hs-cvsu
Version:             0.1.0
Synopsis:            Haskell bindings for the cvsu library.
Description:         This library contains bindings to the c code in cvsu
                     library, based on bindings-dsl, haskell types wrapped
                     around them, and many functions for utilizing the scene
                     understanding features of cvsu.
Homepage:            http://github.org/amnipar/hs-cvsu
License:             BSD3
License-file:        LICENSE
Author:              Matti Johannes Eskelinen
Maintainer:          matti.j.eskelinen@gmail.com
Stability:           Experimental
Category:            AI, Graphics, Machine Vision
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >=1.8

Library
  Exposed-modules:
    CVSU.Types
    CVSU.C.Types
    CVSU.TypedPointer
    CVSU.List
    CVSU.Set
    CVSU.Graph
    CVSU.PixelImage
    CVSU.ConnectedComponents
    CVSU.Integral
    --CVSU.Edges
    CVSU.QuadForest
    --CVSU.TemporalForest
    --CVSU.Segmentation
    --CVSU.Parsing
    CVSU.Moments
  Other-Modules:
    CVSU.Bindings.Types
    CVSU.Bindings.TypedPointer
    CVSU.Bindings.List
    CVSU.Bindings.Set
    CVSU.Bindings.Graph
    CVSU.Bindings.PixelImage
    CVSU.Bindings.ConnectedComponents
    CVSU.Bindings.Integral
    --CVSU.Bindings.Edges
    CVSU.Bindings.QuadForest
    --CVSU.Bindings.BackgroundForest
    --CVSU.Bindings.TemporalForest
    --CVSU.Bindings.Segmentation
    --CVSU.Bindings.Parsing
  Extensions:
    ForeignFunctionInterface
  Build-Depends:
    base >= 3 && < 5,
    bindings-DSL >= 1.0.7 && < 1.1,
    parallel >= 3.2.0.0,
    deepseq >= 1.1.0.2
  Include-dirs:
    c
  cc-options:
    --std=c99
  Extra-libraries:
    m
  Includes:
    c/cvsu_config.h,
    c/cvsu_macros.h,
    c/cvsu_memory.h,
    c/cvsu_output.h,
    c/cvsu_types.h,
    c/cvsu_typed_pointer.h,
    c/cvsu_list.h,
    c/cvsu_set.h,
    c/cvsu_graph.h,
    c/cvsu_pixel_image.h,
    c/cvsu_connected_components.h,
    c/cvsu_filter.h,
    c/cvsu_integral.h,
    c/cvsu_edges.h,
    c/cvsu_context.h,
    c/cvsu_annotation.h,
    c/cvsu_quad_tree.h,
    c/cvsu_quad_forest.h,
    c/cvsu_background_forest.h,
    c/cvsu_temporal_forest.h,
    c/cvsu_segmentation.h,
    c/cvsu_parsing.h
  Install-includes:
    c/cvsu_config.h,
    c/cvsu_macros.h,
    c/cvsu_memory.h,
    c/cvsu_output.h,
    c/cvsu_types.h,
    c/cvsu_typed_pointer.h,
    c/cvsu_list.h,
    c/cvsu_set.h,
    c/cvsu_graph.h,
    c/cvsu_pixel_image.h,
    c/cvsu_connected_components.h,
    c/cvsu_filter.h,
    c/cvsu_integral.h,
    c/cvsu_edges.h,
    c/cvsu_context.h,
    c/cvsu_annotation.h,
    c/cvsu_quad_tree.h,
    c/cvsu_quad_forest.h,
    c/cvsu_background_forest.h,
    c/cvsu_temporal_forest.h,
    c/cvsu_segmentation.h,
    c/cvsu_parsing.h
  C-sources:
    c/cvsu_memory.c,
    c/cvsu_output.c,
    c/cvsu_types.c,
    c/cvsu_typed_pointer.c,
    c/cvsu_list.c,
    c/cvsu_set.c,
    c/cvsu_graph.c,
    c/cvsu_pixel_image.c,
    c/cvsu_connected_components.c,
    c/cvsu_filter.c,
    c/cvsu_integral.c,
    c/cvsu_edges.c,
    c/cvsu_context.c,
    c/cvsu_annotation.c,
    c/cvsu_quad_tree.c,
    c/cvsu_quad_forest.c,
    c/cvsu_background_forest.c,
    c/cvsu_temporal_forest.c,
    c/cvsu_segmentation.c,
    c/cvsu_parsing.c

source-repository head
  type:     git
  location: git@github.com:amnipar/hs-cvsu.git
